# jaseci

./: .dockerignore  .gitignore  .jacignore  .pre-commit-config.yaml  README.md  conftest.py  mypy.ini  predynamo_logger.jac  predynamo_where_2.jac  predynamo_where_2.py  predynamo_where_return.jac  predynamo_where_return.py  pytest.ini  ruff.toml  test.txt
.github/: copilot-instructions.md
.github/agents/: type-system-agent.md
.github/workflows/: build-standalone.yml  check-release-notes.yml  create-release-pr.yml  deploy-docs.yml  docs-validation.yml  jac-check.yml  k8s-microservice-real-e2e.yml  no-ai-coauthor.yml  publish-release.yml  release-byllm.yml  release-client.yml  release-github.yml  release-jaclang.yml  release-jaseci.yml  release-mcp.yml  release-scale.yml  release-super.yml  test-jaseci.yml
docs/: mkdocs.yml
docs/docs/: extra.css  index.html  index.md
docs/internal/: Transport_layer.md
docs/scripts/: handle_jac_compile_data.py  (+1 more)
jac/: .gitignore  README.md  pyproject.toml
jac-byllm/: .flake8  .gitignore  README.md  jac.toml  pyproject.toml
jac-client/: README.md  ROADMAP.md  architecture.md  import-system.md  multi-target-architecture.md  pyproject.toml
jac-mcp/: pyproject.toml
jac-scale/: README.md  pyproject.toml
jac-super/: README.md  pyproject.toml
jac-super/jac_super/: __init__.py
jac-super/jac_super/plugin/: console.jac
jac-super/jac_super/plugin/impl/: console.impl.jac
jaseci-package/: README.md  pyproject.toml
scripts/: fresh_env.sh  integration_tests.py  tests.sh  top_contributors.jac
tests/: test1.jac
(+1076 files in other folders)
