[project]
name = "jac-super"
version = "0.1.11"
description = "Enhanced console output for Jac CLI with Rich formatting"
authors = [{name = "Jason Mars", email = "jason@mars.ninja"}]
maintainers = [{name = "Jason Mars", email = "jason@mars.ninja"}]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "console",
    "rich",
    "cli",
]
requires-python = ">=3.12"
dependencies = [
    "jaclang>=0.14.1",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/jaseci-labs/jaseci"
Homepage = "https://jaseci.org"
Documentation = "https://jac-lang.org"
Source = "https://github.com/jaseci-labs/jaseci/tree/main/jac-super"
Issues = "https://github.com/jaseci-labs/jaseci/issues"
Changelog = "https://github.com/jaseci-labs/jaseci/blob/main/docs/docs/community/release_notes/jac-super.md"

[project.entry-points."jac"]
console = "jac_super.plugin.console:JacSuperPlugin"

[tool.setuptools.packages.find]
include = ["jac_super*"]

[tool.setuptools.package-data]
"*" = ["*.jac", "*.impl/*.jac"]
jac_super = ["_precompiled/**/*.jir", "_precompiled/manifest.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
